--- a/styles.css
+++ b/styles.css
@@ -39,4 +39,23 @@ section {
     margin-bottom: 50px; /* Ajuste de margen inferior para la dirección */
 }
 
+.botones-container {
+    display: flex;
+    justify-content: center;
+    overflow-x: auto; /* Permite el desplazamiento horizontal en dispositivos móviles */
+    white-space: nowrap; /* Evita que los botones se envuelvan a una nueva línea */
+}
+
+.botones-container button {
+    padding: 15px 30px;
+    font-size: 18px;
+    margin: 0 10px;
+    background-color: #204220;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
 
