--- a/styles.css
+++ b/styles.css
@@ -160,19 +160,9 @@ footer button a {
         flex-direction: column; /* Cambia la dirección de los botones a columna en pantallas pequeñas */
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
+footer {
+    text-align: center;
+}
 
 
 
